Fix page break
- On mobile devices content is pushed down due to the sidebar being present but invisible
- Remove `visibility` `hidden`
- Add a remove notice

--- a/docs/_sass/_layout.scss
+++ b/docs/_sass/_layout.scss
@@ -1,6 +1,7 @@
 .side-nav {
   display: none;
-  visibility: hidden;
+  // @todo: Confirm removal: Creates invisible page break
+  // visibility: hidden;
 
   @include media-query($md-screen) {
     display: inline-block;
